<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttons_left"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_Video"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/video_on"
            android:textSize="10sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_Flash"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/flash"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/imageButton_ClawClose"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_garra_cerrar"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/claw_close" />

        <ImageButton
            android:id="@+id/imageButton_Up"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_up"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/arrow_up" />

        <ImageButton
            android:id="@+id/imageButton_Down"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_down"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/arrow_down" />

        <ImageButton
            android:id="@+id/imageButton_ClawOpen"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_garra_abrir"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/claw_open" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_left2"
        android:layout_width="340dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton_Stop"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_detener"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/stop"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imageButton_EmptyUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_vaciar_up"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/sin_vaciar" />

        <ImageButton
            android:id="@+id/imageButton_EmptyDown"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_vaciar_down"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/vaciar" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageMonitor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/todo"
            android:src="@drawable/play_video"
            tools:ignore="ImageContrastCheck"></ImageView>

        <com.teammortys.mortysappkotlin.OverlayView
            android:id="@+id/tracking_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            tools:ignore="MissingClass" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttons_right"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_ObjDetect"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:minHeight="32dp"
            android:text="@string/obj_detect"
            android:textAlignment="center"
            android:textSize="10sp" />

        <ImageButton
            android:id="@+id/imageButton_ZipperUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_cremallera_subir"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/zipper_up" />

        <ImageButton
            android:id="@+id/imageButton_Right"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_right"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/arrow_right" />

        <ImageButton
            android:id="@+id/imageButton_Left"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_letf"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/arrow_left" />

        <ImageButton
            android:id="@+id/imageButton_ZipperDown"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/btn_cremallera_bajar"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/zipper_down" />

        <TextView
            android:id="@+id/textView_RSSI"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/rssi"
            android:textAlignment="center" />
    </LinearLayout>

    <!--
    <EditText
        android:id="@+id/editTextIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/connect"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonDisconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="Disconnect"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonFlash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/flash_on"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textViewRSSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/textViewObjectDetected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center" />
-->

</LinearLayout>