<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextView_IPEsp32Cam"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:hint="@string/ip_de_esp32_cam"
            android:visibility="visible"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_ChangeIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/cambiar_ip"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_CloseConfConexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/btn_cerrar"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>