<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_700"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTextIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/buttonConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/connect"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonDisconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/purple_700"
                android:text="Disconnect"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonFlash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/flash_on"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_cgarraf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/btn_cerrar"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewRSSI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/textViewObjectDetected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>