<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="7.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageMonitor"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/play_video">
                    </ImageView>

                    <com.teammortys.mortysappkotlin.OverlayView
                        android:id="@+id/tracking_overlay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        tools:ignore="MissingClass" />
                </FrameLayout>
                <!--
                <EditText
                    android:id="@+id/editTextIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/buttonConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/connect"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonDisconnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/purple_700"
                    android:text="Disconnect"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonFlash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/flash_on"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textViewRSSI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/textViewObjectDetected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center" />

            -->

                <include layout="@layout/content_view" />
                <include layout="@layout/dpad_view" />

                <Button
                    android:id="@+id/btn_agarra"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_abrir"></Button>

                <Button
                    android:id="@+id/btn_cgarraf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_cerrar"></Button>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>